--- a/tasks/alert-hosts-mem.yaml
+++ b/tasks/alert-hosts-mem.yaml
@@ -21,12 +21,15 @@ spec:
 
               threshold = int('${threshold}')
 
-              def send(status, message, node_name):
+              def send(status, message, host, value):
                   payload = {
                       'kind': '${TASKRUN}',
                       'status': status,
                       'message': message,
-                      'node': node_name
+                      'host': host,
+                      'threshold': '${threshold}',
+                      'operator': '>',
+                      'value': value
                   }
                   headers = {
                       'Content-Type': 'application/json'
@@ -47,6 +50,7 @@ spec:
               def check_mem_usage(host):
                   status = 'normal'
                   message = ''
+                  value = ''
                   node_name = host['status']['hostname']
                   try:
                       mem_usage = host['status'].get('memUsagePercent', '')
@@ -55,21 +59,22 @@ spec:
                       if mem_usage_int > threshold:
                         message += (f"Memory usage {mem_usage_int}% exceeds threshold {threshold}% on host {node_name}.")
                         status = 'alerting'
+                        value = str(mem_usage_int)
                   except KeyError as e:
                       print(f"KeyError: {e}")
                       message = f"Invalid data format for host {node_name}"
                       status = 'alerting'
                   
-                  return status, message, node_name
+                  return status, message, node_name, value
 
               def main():
                   hosts_data = get_all_hosts()
 
                   if hosts_data and 'items' in hosts_data:
                       for host in hosts_data['items']:
-                          status, message, node_name = check_mem_usage(host)
-                          if message:
-                              send(status, message, node_name)
+                          status, message, node_name, value = check_mem_usage(host)
+                          if status == 'alerting':
+                              send(status, message, node_name, value)
 
               if __name__ == "__main__":
                   main()
