--- a/tasks/alert-hosts-failed.yaml
+++ b/tasks/alert-hosts-failed.yaml
@@ -29,7 +29,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${OPSSERVER_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports',
+                  response = requests.post('${OPSSERVER_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.' + host,
                                           headers=headers, data=json.dumps(payload))
                   print(response.text)
 
