--- a/eventhooks/alert-hosts-mem-reports.yaml
+++ b/eventhooks/alert-hosts-mem-reports.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   keywords:
     - alerting
-  subject: ops.clusters.*.namespaces.ops-system.taskruns.alert-hosts-mem.reports
+  subject: ops.clusters.*.namespaces.ops-system.taskruns.alert-hosts-mem.reports.*
   type: xiezuo
   url: https://xz.wps.cn/api/v1/webhook/send?key=
