--- a/tasks/alert-hosts-mem.yaml
+++ b/tasks/alert-hosts-mem.yaml
@@ -34,7 +34,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${OPSSERVER_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports',
+                  response = requests.post('${OPSSERVER_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.' + host,
                                           headers=headers, data=json.dumps(payload))
                   print(response.text)
 
@@ -64,7 +64,7 @@ spec:
                       print(f"KeyError: {e}")
                       message = f"Invalid data format for host {node_name}"
                       status = 'alerting'
- 
+
                   return status, message, node_name, value
 
               def main():
@@ -72,6 +72,8 @@ spec:
 
                   if hosts_data and 'items' in hosts_data:
                       for host in hosts_data['items']:
+                          if host['status']['heartStatus'] == 'Failed':
+                              continue
                           status, message, node_name, value = check_mem_usage(host)
                           send(status, message, node_name, value)
 
