--- a/tasks/alert-npu-drop.yaml
+++ b/tasks/alert-npu-drop.yaml
@@ -25,6 +25,7 @@ spec:
                   payload = {
                       'host': '${HOSTNAME}',
                       'kind': '${TASKRUN}',
+                      'type': 'TaskRunReport',
                       'threshold': str(threshold),
                       'operator': '!=',
                       'status': status,
