--- a/tasks/alert-pod-count-abnormal.yaml
+++ b/tasks/alert-pod-count-abnormal.yaml
@@ -27,6 +27,7 @@ spec:
               def send(status, message):
                   payload = {
                       'kind': '${TASKRUN}',
+                      'type': 'TaskRunReport',
                       'threshold': str(threshold),
                       'operator': '>',
                       'value': len(abnormal_pods),
