--- a/tasks/alert-gpu-fabric.yaml
+++ b/tasks/alert-gpu-fabric.yaml
@@ -25,6 +25,7 @@ spec:
         def send(status, message):
             payload = {
                 'host': '${HOSTNAME}',
+                'type': 'TaskRunReport',
                 'kind': '${TASKRUN}',
                 'threshold': str(threshold),
                 'operator': '>',
