--- a/tasks/alert-hosts-mem.yaml
+++ b/tasks/alert-hosts-mem.yaml
@@ -24,6 +24,7 @@ spec:
               def send(status, message, host, value):
                   payload = {
                       'kind': '${TASKRUN}',
+                      'type': 'TaskRunReport',
                       'status': status,
                       'message': message,
                       'host': host,
