--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -29,6 +29,7 @@ spec:
                   payload = {
                       'host': '${HOSTNAME}',
                       'kind': '${TASKRUN}',
+                      'type': 'TaskRunReport',
                       'threshold': str(threshold),
                       'operator': '!=',
                       'status': status,
