--- a/tasks/alert-network-status.yaml
+++ b/tasks/alert-network-status.yaml
@@ -24,6 +24,7 @@ spec:
               def send(status, message, value):
                   payload = {
                       'host': '${HOSTNAME}',
+                      'type': 'TaskRunReport',
                       'kind': '${TASKRUN}',
                       'threshold': 'up',
                       'operator': '!=',
