--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -21,6 +21,7 @@ spec:
               def send(status, message):
                   payload = {
                       'host': '${HOSTNAME}',
+                      'type': 'TaskRunReport',
                       'kind': '${TASKRUN}',
                       'status': status,
                       'message': message
