--- a/taskruns/alert-evicted-pods.yaml
+++ b/taskruns/alert-evicted-pods.yaml
@@ -4,7 +4,7 @@ metadata:
   name: alert-evicted-pods
   namespace: ops-system
 spec:
-  crontab: "*/10 * * * *"
+  crontab: "45 * * * *"
   taskRef: alert-evicted-pods
   variables:
     threshold: "10"
