--- a/taskruns/alert-gpu-zombie.yaml
+++ b/taskruns/alert-gpu-zombie.yaml
@@ -4,5 +4,5 @@ metadata:
   name: alert-gpu-zombie
   namespace: ops-system
 spec:
-  crontab: "30 * * * *"
+  crontab: "*/30 * * * *"
   taskRef: alert-gpu-zombie
