--- a/taskruns/clear-opspod.yaml
+++ b/taskruns/clear-opspod.yaml
@@ -4,5 +4,5 @@ metadata:
   name: clear-opspod
   namespace: ops-system
 spec:
-  crontab: "30 * * * *"
+  crontab: "*/30 * * * *"
   taskRef: clear-opspod 
