--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -68,20 +68,20 @@ spec:
                       send('alerting', message, card_count)
                   else:
                       send('normal', '', card_count)
-                  # 3. lspci check
-                  output = subprocess.run(['lspci'], universal_newlines=True, stdout=subprocess.PIPE).stdout
-                  card_count = 0
-                  lines = [line for line in output.split('\n') if 'controller: NVIDIA Corporation' in line and 'USB' not in line]
-                  for index, line in enumerate(lines):
-                      line = line.strip()
-                      if 'NVIDIA' in line:
-                          card_count += 1
-                      elif len(line) > 0:
-                          message += build_message(line, index)
-                  if card_count != threshold:
-                      message += build_message('pci card count mismatch: %d (desired %d)' % (card_count, threshold))
-                      send('alerting', message, card_count)
-                  else:
-                      send('normal', '', card_count)
+                #   # 3. lspci check
+                #   output = subprocess.run(['lspci'], universal_newlines=True, stdout=subprocess.PIPE).stdout
+                #   card_count = 0
+                #   lines = [line for line in output.split('\n') if 'controller: NVIDIA Corporation' in line and 'USB' not in line]
+                #   for index, line in enumerate(lines):
+                #       line = line.strip()
+                #       if 'NVIDIA' in line:
+                #           card_count += 1
+                #       elif len(line) > 0:
+                #           message += build_message(line, index)
+                #   if card_count != threshold:
+                #       message += build_message('pci card count mismatch: %d (desired %d)' % (card_count, threshold))
+                #       send('alerting', message, card_count)
+                #   else:
+                #       send('normal', '', card_count)
               except Exception as e:
                   send('alerting', str(e), 0)
