--- a/tasks/restart-gpu-manager.yaml
+++ b/tasks/restart-gpu-manager.yaml
@@ -18,6 +18,6 @@ spec:
 
         for container_id in $container_ids; do
           echo "restart containerd: $container_id"
-          nerdctl -n k8s.io restart "$container_id" || true
+          nerdctl -n k8s.io restart "$container_id" > /dev/null 2>&1 || true
         done
 
