--- a/tasks/get-deployment-bypod.yaml
+++ b/tasks/get-deployment-bypod.yaml
@@ -17,5 +17,4 @@ spec:
     - name: get pod deployment
       content: |
         export deploy=`echo ${pod} | cut -d'-' -f1-4`
-        kubectl get deployments $deploy -n ${namespace}
-
+        kubectl get deployments -n ${namespace} | grep ${deploy}
