--- a/tasks/set-mirror.yaml
+++ b/tasks/set-mirror.yaml
@@ -8,5 +8,5 @@ spec:
   steps:
     - name: install required packages
       content: |
-        PROXY="https://ghp.ci/" &&
+        PROXY="https://cf.ghproxy.cc/" &&
         curl -sfL "$PROXY"https://raw.githubusercontent.com/shaowenchen/hubimage/main/mirror/ubuntu/get.sh | sh -
