--- a/tasks/set-os-mirror.yaml
+++ b/tasks/set-os-mirror.yaml
@@ -7,7 +7,7 @@ spec:
   desc: set os mirror friendly to China for specified host
   variables:
     proxy: 
-      default: https://cf.ghproxy.cc/
+      default: https://ghproxy.chenshaowen.com/
   steps:
     - name: Set mirror
       content: curl -sfL ${proxy}https://raw.githubusercontent.com/shaowenchen/hubimage/main/mirror/get.sh | sh -
