--- a/tasks/clear-disk.yaml
+++ b/tasks/clear-disk.yaml
@@ -23,6 +23,7 @@ spec:
       content: find /data/run -type f \( -name "*.log" -o -name "*.log.[0-9]*" \) -size +100M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} + 2>/dev/null || true
     - name: clear .cache
       content: find /data/containerd/ -type f -size +1G -path '*/.cache/*' -exec rm -f {} \;
+      allowFailure: true
     - name: clear jfs cache
       content: |
         find /data*/jfs*/*/raw/chunks -maxdepth 3 -type d -ctime +3 -exec rm -rf {} + 2>/dev/null || true
