--- a/tasks/check-npu-drop.yaml
+++ b/tasks/check-npu-drop.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   desc: check the npu card dropped in specified host
   variables:
-    desired_npu_count: 
+    desired_npu_count:
       default: "16"
   steps:
     - name: Check npu-smi
@@ -23,3 +23,9 @@ spec:
       allowfailure: "true"
       content: |
         NPU_SMI_COUNT=$(($(npu-smi info -l 2>&1 | grep -oP 'Total Count\s*:\s*\K\d+'))); [ $NPU_SMI_COUNT -eq ${desired_npu_count} ] && echo "OK - NPU count matches: $NPU_SMI_COUNT" || echo "ERROR - NPU count mismatch: $NPU_SMI_COUNT vs desired_npu_count ${desired_npu_count}"
+    - name: Check Link status
+      content: |
+        for ((i=0; i<${desired_npu_count}; i++)); do
+            hccn_tool -i $i -link -g
+        done
+      allowfailure: "true"
