--- a/tasks/alert-npu-drop.yaml
+++ b/tasks/alert-npu-drop.yaml
@@ -59,6 +59,8 @@ spec:
                       else:
                           message += build_message(line, card_count)
                   if card_count != threshold:
+                      if message == '':
+                          message = 'npu-smi info display abnormal'
                       send('alerting', message)
                   # 3. lspci check, lspci |grep d80
                   output = subprocess.run(['lspci'], universal_newlines=True, stdout=subprocess.PIPE).stdout
