--- a/tasks/create-namespace-workload-kubeconfig.yaml
+++ b/tasks/create-namespace-workload-kubeconfig.yaml
@@ -33,7 +33,7 @@ spec:
           namespace: $TARGET_NAMESPACE
         rules:
         - apiGroups: [""]
-          resources: ["pods", "services"]
+          resources: ["pods", "services", "pods/log", "pods/exec", "events"]
           verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
         - apiGroups: ["apps"]
           resources: ["deployments"]
