--- a/tasks/create-namespace-workload-kubeconfig.yaml
+++ b/tasks/create-namespace-workload-kubeconfig.yaml
@@ -34,7 +34,10 @@ spec:
         rules:
         - apiGroups: [""]
           resources: ["pods", "services", "pods/log", "pods/exec", "events", "configmaps", "secrets"]
-          verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+          verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
+        - apiGroups: [""]
+          resources: ["persistentvolumeclaims"]
+          verbs: ["get", "list"]
         - apiGroups: ["apps"]
           resources: ["deployments"]
           verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
